remove default data

--- a/blog/2022-06-22.mdx
+++ b/blog/2022-06-22.mdx
@@ -1,7 +1,7 @@
 ---
-slug: mdx-blog-post
-title: MDX Blog Post
-authors: [slorber]
+slug: blog-placeholder
+title: Blog placeholder
+authors: [mason]
 tags: [docusaurus]
 ---
 
